--- a/day_05/ex02/preprocessing.ipynb
+++ b/day_05/ex02/preprocessing.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EX02"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('ID', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -180,24 +196,23 @@
        "[931 rows x 5 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.set_index('ID')"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID              931\n",
        "CarNumber       931\n",
        "Make_n_model    931\n",
        "Refund          914\n",
@@ -206,7 +221,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +241,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID              725\n",
        "CarNumber       725\n",
        "Make_n_model    725\n",
        "Refund          713\n",
@@ -241,7 +255,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,13 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID                0\n",
        "CarNumber         0\n",
        "Make_n_model      0\n",
        "Refund           12\n",
@@ -267,7 +280,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,13 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID               0\n",
        "CarNumber        0\n",
        "Make_n_model     0\n",
        "Refund          12\n",
@@ -301,7 +313,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,13 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID               0\n",
        "CarNumber        0\n",
        "Make_n_model     0\n",
        "Refund           0\n",
@@ -326,7 +337,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,23 +349,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "mean = df['Fines'].dropna().mean()\n",
+    "# import numpy as np\n",
+    "# df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "# df['Fines'].replace([float('inf'), -float('inf')], mean, inplace=True)\n",
     "df['Fines'].fillna(mean, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "df.dropna(inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ID              0\n",
        "CarNumber       0\n",
        "Make_n_model    0\n",
        "Refund          0\n",
@@ -362,18 +385,50 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID\n",
+       "0       3200\n",
+       "1       6500\n",
+       "2       2100\n",
+       "3       2000\n",
+       "5       5700\n",
+       "       ...  \n",
+       "925    24300\n",
+       "926     1600\n",
+       "927    22300\n",
+       "928      600\n",
+       "929     2000\n",
+       "Name: Fines, Length: 665, dtype: object"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Fines']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +452,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
        "      <th>CarNumber</th>\n",
        "      <th>Make_n_model</th>\n",
        "      <th>Refund</th>\n",
@@ -405,11 +459,19 @@
        "      <th>make</th>\n",
        "      <th>model</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Y163O8161RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>2.0</td>\n",
@@ -418,8 +480,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>E432XX77RUS</td>\n",
        "      <td>Toyota Camry</td>\n",
        "      <td>1.0</td>\n",
@@ -428,8 +489,7 @@
        "      <td>Camry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>7184TT36RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>1.0</td>\n",
@@ -438,8 +498,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>X582HE161RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>2.0</td>\n",
@@ -448,8 +507,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>92918M178RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>1.0</td>\n",
@@ -465,11 +523,18 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>927</th>\n",
-       "      <td>926</td>\n",
+       "      <th>925</th>\n",
+       "      <td>O22097197RUS</td>\n",
+       "      <td>Ford Focus</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24300</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>Focus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
        "      <td>Y163O8161RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>2.0</td>\n",
@@ -478,8 +543,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>928</th>\n",
-       "      <td>927</td>\n",
+       "      <th>927</th>\n",
        "      <td>M0309X197RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>1.0</td>\n",
@@ -488,8 +552,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>929</th>\n",
-       "      <td>928</td>\n",
+       "      <th>928</th>\n",
        "      <td>O673E8197RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>2.0</td>\n",
@@ -498,8 +561,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>930</th>\n",
-       "      <td>929</td>\n",
+       "      <th>929</th>\n",
        "      <td>8610T8154RUS</td>\n",
        "      <td>Ford Focus</td>\n",
        "      <td>1.0</td>\n",
@@ -507,39 +569,30 @@
        "      <td>Ford</td>\n",
        "      <td>Focus</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>931</th>\n",
-       "      <td>930</td>\n",
-       "      <td>H419XE197RUS</td>\n",
-       "      <td>Toyota Corolla</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Corolla</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>725 rows × 7 columns</p>\n",
+       "<p>665 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      ID     CarNumber    Make_n_model Refund  Fines    make    model\n",
-       "1      0  Y163O8161RUS      Ford Focus    2.0   3200    Ford    Focus\n",
-       "2      1   E432XX77RUS    Toyota Camry    1.0   6500  Toyota    Camry\n",
-       "3      2   7184TT36RUS      Ford Focus    1.0   2100    Ford    Focus\n",
-       "4      3  X582HE161RUS      Ford Focus    2.0   2000    Ford    Focus\n",
-       "6      5  92918M178RUS      Ford Focus    1.0   5700    Ford    Focus\n",
-       "..   ...           ...             ...    ...    ...     ...      ...\n",
-       "927  926  Y163O8161RUS      Ford Focus    2.0   1600    Ford    Focus\n",
-       "928  927  M0309X197RUS      Ford Focus    1.0  22300    Ford    Focus\n",
-       "929  928  O673E8197RUS      Ford Focus    2.0    600    Ford    Focus\n",
-       "930  929  8610T8154RUS      Ford Focus    1.0   2000    Ford    Focus\n",
-       "931  930  H419XE197RUS  Toyota Corolla    2.0    inf  Toyota  Corolla\n",
+       "        CarNumber  Make_n_model Refund  Fines    make  model\n",
+       "ID                                                          \n",
+       "0    Y163O8161RUS    Ford Focus    2.0   3200    Ford  Focus\n",
+       "1     E432XX77RUS  Toyota Camry    1.0   6500  Toyota  Camry\n",
+       "2     7184TT36RUS    Ford Focus    1.0   2100    Ford  Focus\n",
+       "3    X582HE161RUS    Ford Focus    2.0   2000    Ford  Focus\n",
+       "5    92918M178RUS    Ford Focus    1.0   5700    Ford  Focus\n",
+       "..            ...           ...    ...    ...     ...    ...\n",
+       "925  O22097197RUS    Ford Focus    1.0  24300    Ford  Focus\n",
+       "926  Y163O8161RUS    Ford Focus    2.0   1600    Ford  Focus\n",
+       "927  M0309X197RUS    Ford Focus    1.0  22300    Ford  Focus\n",
+       "928  O673E8197RUS    Ford Focus    2.0    600    Ford  Focus\n",
+       "929  8610T8154RUS    Ford Focus    1.0   2000    Ford  Focus\n",
        "\n",
-       "[725 rows x 7 columns]"
+       "[665 rows x 6 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -585,18 +638,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
        "      <th>CarNumber</th>\n",
        "      <th>Refund</th>\n",
        "      <th>Fines</th>\n",
        "      <th>make</th>\n",
        "      <th>model</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Y163O8161RUS</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3200</td>\n",
@@ -604,8 +663,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>E432XX77RUS</td>\n",
        "      <td>1.0</td>\n",
        "      <td>6500</td>\n",
@@ -613,8 +671,7 @@
        "      <td>Camry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>7184TT36RUS</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2100</td>\n",
@@ -622,8 +679,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>X582HE161RUS</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2000</td>\n",
@@ -631,8 +687,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>92918M178RUS</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5700</td>\n",
@@ -646,11 +701,17 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>927</th>\n",
-       "      <td>926</td>\n",
+       "      <th>925</th>\n",
+       "      <td>O22097197RUS</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24300</td>\n",
+       "      <td>Ford</td>\n",
+       "      <td>Focus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
        "      <td>Y163O8161RUS</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1600</td>\n",
@@ -658,8 +719,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>928</th>\n",
-       "      <td>927</td>\n",
+       "      <th>927</th>\n",
        "      <td>M0309X197RUS</td>\n",
        "      <td>1.0</td>\n",
        "      <td>22300</td>\n",
@@ -667,8 +727,7 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>929</th>\n",
-       "      <td>928</td>\n",
+       "      <th>928</th>\n",
        "      <td>O673E8197RUS</td>\n",
        "      <td>2.0</td>\n",
        "      <td>600</td>\n",
@@ -676,46 +735,37 @@
        "      <td>Focus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>930</th>\n",
-       "      <td>929</td>\n",
+       "      <th>929</th>\n",
        "      <td>8610T8154RUS</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2000</td>\n",
        "      <td>Ford</td>\n",
        "      <td>Focus</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>931</th>\n",
-       "      <td>930</td>\n",
-       "      <td>H419XE197RUS</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>Toyota</td>\n",
-       "      <td>Corolla</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>725 rows × 6 columns</p>\n",
+       "<p>665 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      ID     CarNumber Refund  Fines    make    model\n",
-       "1      0  Y163O8161RUS    2.0   3200    Ford    Focus\n",
-       "2      1   E432XX77RUS    1.0   6500  Toyota    Camry\n",
-       "3      2   7184TT36RUS    1.0   2100    Ford    Focus\n",
-       "4      3  X582HE161RUS    2.0   2000    Ford    Focus\n",
-       "6      5  92918M178RUS    1.0   5700    Ford    Focus\n",
-       "..   ...           ...    ...    ...     ...      ...\n",
-       "927  926  Y163O8161RUS    2.0   1600    Ford    Focus\n",
-       "928  927  M0309X197RUS    1.0  22300    Ford    Focus\n",
-       "929  928  O673E8197RUS    2.0    600    Ford    Focus\n",
-       "930  929  8610T8154RUS    1.0   2000    Ford    Focus\n",
-       "931  930  H419XE197RUS    2.0    inf  Toyota  Corolla\n",
+       "        CarNumber Refund  Fines    make  model\n",
+       "ID                                            \n",
+       "0    Y163O8161RUS    2.0   3200    Ford  Focus\n",
+       "1     E432XX77RUS    1.0   6500  Toyota  Camry\n",
+       "2     7184TT36RUS    1.0   2100    Ford  Focus\n",
+       "3    X582HE161RUS    2.0   2000    Ford  Focus\n",
+       "5    92918M178RUS    1.0   5700    Ford  Focus\n",
+       "..            ...    ...    ...     ...    ...\n",
+       "925  O22097197RUS    1.0  24300    Ford  Focus\n",
+       "926  Y163O8161RUS    2.0   1600    Ford  Focus\n",
+       "927  M0309X197RUS    1.0  22300    Ford  Focus\n",
+       "928  O673E8197RUS    2.0    600    Ford  Focus\n",
+       "929  8610T8154RUS    1.0   2000    Ford  Focus\n",
        "\n",
-       "[725 rows x 6 columns]"
+       "[665 rows x 5 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
